deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tsm
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: tsm
